fixed overflow issue on contact us page

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -108,7 +108,7 @@
 
 .single-page {
   display: block;
-  overflow: block;
+  overflow: hidden;
   font-size: 14px;
 }
 
